# agent-weather

./: README.md  app.py  pyproject.toml
agent_weather/: config.py  models.py
agent_weather.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent_weather/adapters/: __init__.py  base.py  mock.py  nanobot.py  openclaw.py  registry.py  seju_lite.py  utils.py
agent_weather/data/: mock_runs.py
agent_weather/services/: aggregator.py  context_builder.py  evaluator.py  skill_suggestions.py  weather_rules.py
agent_weather/ui/: dashboard.py  sections.py
