[project]
name = "agent-weather"
version = "0.1.0"
description = "A Streamlit observability console for evaluating a single AI agent as a weather system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.44.0",
  "pydantic>=2.10.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent_weather*"]
